name:                wkt
version:             0.1
synopsis:            Parsers and types for Well-Known Text data
-- description:         
homepage:            http://github.com/bgamari/wkt
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari.foss@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Geo.WKT, Data.Geo.WKT.Types, Data.Geo.WKT.Parser
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.6 && <4.7,
                       lens >=3.9 && <3.10,
                       linear >=1.3 && <1.4,
                       parsec >=3.1 && <3.2,
                       parsec-numbers >=0.0 && <0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
